--- a/TicketBooth/App.config
+++ b/TicketBooth/App.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
-    </startup>
+  <startup> 
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
+  </startup>
+
+  <appSettings>
+    <add key="serviceAccountUsername" value="XXX" />
+    <add key="serviceAccountPassword" value="XXX" />
+  </appSettings>
 </configuration>
