--- a/TicketBooth/packages.config
+++ b/TicketBooth/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="FSharp.Configuration" version="0.6.4" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
   <package id="FSharp.Data" version="2.3.2" targetFramework="net452" />
   <package id="SQLProvider" version="1.0.43" targetFramework="net452" />
