--- a/TicketBooth/TicketBooth.fsproj
+++ b/TicketBooth/TicketBooth.fsproj
@@ -60,9 +60,11 @@
     <None Include="App.config" />
     <Content Include="packages.config" />
     <Compile Include="Util.fs" />
+    <Compile Include="Types.fs" />
     <Compile Include="ThunderTix.Session.fs" />
     <Compile Include="ThunderTix.Performance.fs" />
     <Compile Include="ThunderTix.Service.fs" />
+    <Compile Include="ThunderTix.Reports.fs" />
     <Compile Include="Sql.fs" />
     <Compile Include="Program.fs" />
     <None Include="schema.sql" />
