--- a/TicketBooth/packages.config
+++ b/TicketBooth/packages.config
@@ -3,6 +3,8 @@
   <package id="FSharp.Configuration" version="0.6.4" targetFramework="net452" />
   <package id="FSharp.Core" version="4.0.0.1" targetFramework="net452" />
   <package id="FSharp.Data" version="2.3.2" targetFramework="net452" />
+  <package id="FsUnit" version="2.3.2" targetFramework="net452" />
+  <package id="NUnit" version="3.5.0" targetFramework="net452" />
   <package id="SQLProvider" version="1.0.43" targetFramework="net452" />
   <package id="Suave" version="2.0.4" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net452" />
